@@ -69,13 +69,4 @@ guchar  * temp_buf_data_clear  (TempBuf       *buf);
 gsize     temp_buf_get_memsize (TempBuf       *buf);
 
 
-/* The mask buffer functions  */
-
-MaskBuf * mask_buf_new         (gint           width,
-                                gint           height);
-void      mask_buf_free        (MaskBuf       *mask_buf);
-guchar  * mask_buf_data        (MaskBuf       *mask_buf);
-guchar  * mask_buf_data_clear  (MaskBuf       *mask_buf);
-
-
 #endif  /*  __TEMP_BUF_H__  */
